Fix a common OCR problem
Replace "间题" with "问题".

--- a/01.Rmd
+++ b/01.Rmd
@@ -122,7 +122,7 @@
 +------------------------------------+-------------------------------------------------------+
 | 发表你的著作                         | 在技术报告、学术讨论会和研讨会上公开发表你的文章。获得信息最好的办法就是和别人共享信息。人们只有知道了你的思想，才能够做出回应。把你的文章公之于众可以让你更早面对他人的问题和批评（因为还早，这些问题和批评对你都是有好处的），也可以帮你融人一个“人际网”，还可以提供不少锻炼你的表达能力尤其是推理论证能力的机会。  |
 +------------------------------------+-------------------------------------------------------+
-| 然后？学会问其他的间题               | 学生们往往是有一点成果之后就忘了要走下一步了。“嘿，我找到它们之间的联系了！”“然后呢？”要学会超越你最初的问题，学会换个角度思考，只有这样才能看到不同的角度，然后找到其他可供选择的解释。  |
+| 然后？学会问其他的问题               | 学生们往往是有一点成果之后就忘了要走下一步了。“嘿，我找到它们之间的联系了！”“然后呢？”要学会超越你最初的问题，学会换个角度思考，只有这样才能看到不同的角度，然后找到其他可供选择的解释。  |
 +------------------------------------+-------------------------------------------------------+
 | 不要躲着你的导师                     | “躲导师”从某种程度上来说是每个研究生都可能犯的通病。事实上，要想最大限度地从你的导师那里获取信息，主动和他交流是首要的条件。          |
 +------------------------------------+-------------------------------------------------------+
