--- a/11.Rmd
+++ b/11.Rmd
@@ -1,8 +1,8 @@
 # 写作过程
 
-每个博士生迟早都会或多或少遇到写作问题。有时候这类问题会以写作瓶颈的形式出现——你坐在键盘前，打字机或纸张前，无论如何也写不出什么东西来。有时候这个问题又以逃避的形式出现——你找出种种借口来逃避写作任务。有时候它又成了一个涉及作者语言的间题——你可以写出与课题相关的东西来，但无论你如何尝试，你写的东西读起来总是无法达到你想要的效果。
+每个博士生迟早都会或多或少遇到写作问题。有时候这类问题会以写作瓶颈的形式出现——你坐在键盘前，打字机或纸张前，无论如何也写不出什么东西来。有时候这个问题又以逃避的形式出现——你找出种种借口来逃避写作任务。有时候它又成了一个涉及作者语言的问题——你可以写出与课题相关的东西来，但无论你如何尝试，你写的东西读起来总是无法达到你想要的效果。
 
-如果你遇到了这些困难，首先要告诉自己的是，几乎每个人都会遇到类似的困难。成功的研究人员和论文作者并不是一帆风顺的人，而是克服了困难的人。你也可以克服困难。这一章讨论的是写作的过程，涉及写作过程中的普遍间题，也会涉及在写作进展顺利时如何更上一层楼。
+如果你遇到了这些困难，首先要告诉自己的是，几乎每个人都会遇到类似的困难。成功的研究人员和论文作者并不是一帆风顺的人，而是克服了困难的人。你也可以克服困难。这一章讨论的是写作的过程，涉及写作过程中的普遍问题，也会涉及在写作进展顺利时如何更上一层楼。
 
 如果你正在读这一章是因为你正在经历写作的挫折，你感到前途渺茫、情绪低落，那么你一定要记住写论文的底线：一篇论文不需要有趣或雅致，它只需要能体现你获取博士学位的资格。将来可能有一天，研究工作者也能获得诺贝尔文学奖，但获奖作品肯定不是他的研究论文。
 
