--- a/16.Rmd
+++ b/16.Rmd
@@ -22,7 +22,7 @@
 
 在研究团体中的地位并不是来自于你的研究机构的威望，或者你头衔的分量。最重要的因素是你的研究工作的质量。如果你做的是枯燥乏味、非常平庸的工作，就不会制造出什么奇迹，研究团体不会因为你是计算机科学、数学、计算机硬件教授就会留下深刻印象，也不会简单地认为你不值得那个头衔。如果你的研究工作做出了有趣发现，为你的同事开启了新的研究方向，那么你就会被认真对待，即便你只是芬兰某学院的助教。在研究团体中的身份可以用不同的方式在正式场合得到承认，例如，被邀请在学术会议上作关键演讲，成为杂志编委等。
 
-不幸的是，个人在团体内的研究身份以及他们在其所在机构的研究地位通常会被混淆。作为一种普遍情况，在新的大学中这种间题更多，行政系统不懂得处理研究身份的问题，把研究身份直接同在组织的官方等级体系中的职位挂钩。在这样的状态下，研究团体中地位不高的教授被当做十分重要的人物对待，而在研究团体中有国际声望的讲师则被看成是无足轻重的人。
+不幸的是，个人在团体内的研究身份以及他们在其所在机构的研究地位通常会被混淆。作为一种普遍情况，在新的大学中这种问题更多，行政系统不懂得处理研究身份的问题，把研究身份直接同在组织的官方等级体系中的职位挂钩。在这样的状态下，研究团体中地位不高的教授被当做十分重要的人物对待，而在研究团体中有国际声望的讲师则被看成是无足轻重的人。
 
 ### 权力
 
