--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ knit: "bookdown::render_book"
 
 研究生们毕业以后常常会发出这样的感叹：“为什么没有人早点告诉我这些呢？”有很多东西，如果早点得知，就可以少点困惑、失望、痛苦和泪水了。但是，在现实中，却没有人愿意将这些事情告诉你，或者写到教科书中去。
 
-本书作者曾经花费大量的时间来帮助那些满怀求知欲的初学者。他经常是一边喝咖啡一边向他们解释学术研究规则。为了减少学生咖啡因的摄入，作者决定将这些技巧、规则等都写成书。书中将大体阐明学术界的基本技巧和规则，并介绍进行研究工作的一些细节间题。本书所关注的传点是那些主流教科书所不屑于提及，而实际上却至关重要的问题，因为主流的教科书大多想当然地认为可以把这些问题留给读者的导师来解决。
+本书作者曾经花费大量的时间来帮助那些满怀求知欲的初学者。他经常是一边喝咖啡一边向他们解释学术研究规则。为了减少学生咖啡因的摄入，作者决定将这些技巧、规则等都写成书。书中将大体阐明学术界的基本技巧和规则，并介绍进行研究工作的一些细节问题。本书所关注的传点是那些主流教科书所不屑于提及，而实际上却至关重要的问题，因为主流的教科书大多想当然地认为可以把这些问题留给读者的导师来解决。
 
 如果你正在攻读博士或者是硕士学位，本书将帮助你尽量少走弯路，以做出最好的研究成果。同时，本书也将帮助你充分利用这些研究成果，将它们变成你的职业生涯和个人发展的重要组成部分。这样就可以避免以下情况出现：毕业的那一天，你拿着学位证书，却苦于不知道下一步该做些什么，这时候突然发现自已花费了多年时间却是在一个错误的方向上痛苦地爬行。
 
