Fix a common OCR issue by replacing "千" with "于"

--- a/index.Rmd
+++ b/index.Rmd
@@ -23,11 +23,11 @@ knit: "bookdown::render_book"
 
 # 使用本书须知 {-}
 
-我们曾经花了很多时间去帮助博士生们解决问题，也曾为那些将要成为博士生并且希望避免类似问题的人提供过建议。他们中的大部分人都已经读过诸如《怎样获得博士学位》（*How to get a PhD*）这一类的书，也曾得到来自导师的好建议。现在的问题并不是关于这些书和建议，因为这方面的书大多是非常出色的，我们所听到的建议也大多是比较合理与中肯的。所以，问题的关键是来自千这些书和建议所缺乏的内容。本书将致力千填补这些空缺。
+我们曾经花了很多时间去帮助博士生们解决问题，也曾为那些将要成为博士生并且希望避免类似问题的人提供过建议。他们中的大部分人都已经读过诸如《怎样获得博士学位》（*How to get a PhD*）这一类的书，也曾得到来自导师的好建议。现在的问题并不是关于这些书和建议，因为这方面的书大多是非常出色的，我们所听到的建议也大多是比较合理与中肯的。所以，问题的关键是来自于这些书和建议所缺乏的内容。本书将致力于填补这些空缺。
 
 我们关注的大部分问题是那些通常被称作隐性知识的内容————这些知识、没有人愿意明确地告诉你，因为他们认为你已经知道；或者因为他们已经对这些知识太过熟悉，以致忘记了其他人也许并不知道；抑或是因为他们认为这些知识不值得提起。作者通常会认为这些东西应该会被导师们在一些不是很正式的场合提到。在理想的世界中，的确应当如此，但现实情况是：导师们也都是普通人，他们并非没有缺点，而且他们工作都很忙，所以难免会有所疏漏。我们所做的就是把这些没有写下来的规则做一个概述和总结，以便让你对现实情况有一个更深人的了解。这样，你就可以向你的导师询问，你所从事的学科是怎样运行的；运气好的话，你可以从导师那里得到很多可靠并且明确的指导。
 
-按照我们的经验，博士生通常会在两类问题上遇到麻烦。一类是，学术系统怎样运行，以及为什么这样运行之类的大问题。例如：学术界一些杰出人物的特殊经历和职业发展道路是怎样的？为什么学术文章的写作如此枯燥？为什么有的人博土还没有毕业就可以在非常好的院系获得讲师职位，而另外一些人在获得博士学位十年以后仍然要为找到一个工作而奋斗？一个好的院系的评价标准是什么？为什么？有的学生害怕问这些问题会显得很无知，更多学生则是因为过千关注与博士学位直接相关的问题，而没有去考虑得更加长远，当他们意识到的时候，一切都晚了。
+按照我们的经验，博士生通常会在两类问题上遇到麻烦。一类是，学术系统怎样运行，以及为什么这样运行之类的大问题。例如：学术界一些杰出人物的特殊经历和职业发展道路是怎样的？为什么学术文章的写作如此枯燥？为什么有的人博土还没有毕业就可以在非常好的院系获得讲师职位，而另外一些人在获得博士学位十年以后仍然要为找到一个工作而奋斗？一个好的院系的评价标准是什么？为什么？有的学生害怕问这些问题会显得很无知，更多学生则是因为过于关注与博士学位直接相关的问题，而没有去考虑得更加长远，当他们意识到的时候，一切都晚了。
 
 另一类则是技巧层面的问题。有一些比较低层次的技术问题，通常被看得不是那么重要，而没有书谈及。这些学科内的技巧一般都是导师或者是讲师在平时传授的。这类问题从一些十分具体的信息（例如“我在文章的第一段中应当提到几条参考文献？”）到一般的经验法则（rules of thumb）（例如“我如何才能够在没有刻苦阅读文献的情况下，对导师给我的题目有一个清晰而完整的认识？”）。这些特定的技巧以及答案会因学科的不同而不同，但是一旦你学到了这些技巧层面的基本概念，你马上就可以找到自己学科的诀窍所在，并很快学会它。
 
@@ -35,11 +35,11 @@ knit: "bookdown::render_book"
 
 对关键事情的理解当然很重要，但是如果明天就是你的第一次研讨会发言，而你正在担心自己会忽略了一些显而易见的问题时，仅仅理解就不足以使人宽慰了。所以，我们收录了许多清单和要点，以便你核对自己是否已经记住了那些关键的事情。
 
-以上介绍的就是本书的主体内容。我们建议你先从头到尾通读一遍。接下来最好能够细读一遍，首先从那些离你最远的主题开始（例如，先读那些关于博士毕业以后应该做什么的章节，然后是关千论文写作和答辩的章节）。之所以这样是因为大部分的学生都过于关注当前他们所面对的问题，而很少关注下一步的问题。在短期内，这也许是不错的选择，但是长期来看，却常常会造成一些问题。例如，如果你所在的院系要求你在相关的学术期刊上至少发表两篇论文，而且拥有至少两年的兼职授课经验，才能将你列入全职教员的最终候选名单，那将会怎样呢？如果在博士毕业的6个月以前，还没有发现这个问题，而你又想直接获得这份教职，那么你将会遇到很大的麻烦；如果你很早就知道这个问题，你将有充分的时间去准备一份好简历所需要的东西。
+以上介绍的就是本书的主体内容。我们建议你先从头到尾通读一遍。接下来最好能够细读一遍，首先从那些离你最远的主题开始（例如，先读那些关于博士毕业以后应该做什么的章节，然后是关于论文写作和答辩的章节）。之所以这样是因为大部分的学生都过于关注当前他们所面对的问题，而很少关注下一步的问题。在短期内，这也许是不错的选择，但是长期来看，却常常会造成一些问题。例如，如果你所在的院系要求你在相关的学术期刊上至少发表两篇论文，而且拥有至少两年的兼职授课经验，才能将你列入全职教员的最终候选名单，那将会怎样呢？如果在博士毕业的6个月以前，还没有发现这个问题，而你又想直接获得这份教职，那么你将会遇到很大的麻烦；如果你很早就知道这个问题，你将有充分的时间去准备一份好简历所需要的东西。
 
 在读这本书的时候要充分意识到每个学科都是不一样的。这也是为什么我们经常使用“通常“这个词。简历中个人特质的确切说明会因学科而不同，但是基本的概念通常是相同的。本书的目的是为了帮助你理解这些基本的概念，进而可以找到这些概念在你所处的学科中的表现形式，然后确保你在自己的论文、陈述报告和简历中展现出应有的水平。
 
-关于如何取得博士学位的书往往最后有一个推荐书目，而这本书没有。这本书提供的是对所有学科的学生都十分有用的经典著作，例如赫夫（Huff）的《统计陷阱》（*How to Lie with Statistics*）。除了这些经典，不同的学科有着完全不同的核心读物，而且我们认为将不同学科的核心读物整理为一个书目对同学们没有很大帮助。一些作者认为文集十分有用，而且认为这对其他人也很有用，千是在书目中提到。而我们决定不这样做，虽然并非没有疑虑。绝大部分我们推荐的书都是很特别的，学生们可能花时间读过才会弄明白我们推荐这些书［如修昔底德的《伯罗奔尼撒战争史》（*History of the Peloponnesian War*）]并非开玩笑。
+关于如何取得博士学位的书往往最后有一个推荐书目，而这本书没有。这本书提供的是对所有学科的学生都十分有用的经典著作，例如赫夫（Huff）的《统计陷阱》（*How to Lie with Statistics*）。除了这些经典，不同的学科有着完全不同的核心读物，而且我们认为将不同学科的核心读物整理为一个书目对同学们没有很大帮助。一些作者认为文集十分有用，而且认为这对其他人也很有用，于是在书目中提到。而我们决定不这样做，虽然并非没有疑虑。绝大部分我们推荐的书都是很特别的，学生们可能花时间读过才会弄明白我们推荐这些书［如修昔底德的《伯罗奔尼撒战争史》（*History of the Peloponnesian War*）]并非开玩笑。
 
 取而代之，我们的做法是在阅读部分引入一些文献检索方法，你可以借助这些方法找到需要的关键文章，希望这样能够尽量节省你的时间和精力。另外，我们还加入了一个可能对你有帮助的术语清单。这些主要是我们在本书中用到的特殊术语，以及在一个或多个学科中使用而还没有在大多数教材中出现的术语，例如“浏览原始数据”(eyeballing the data) 。
 
