Fix incorrect usage of brackets by replacing "()" with "（）"

--- a/02.Rmd
+++ b/02.Rmd
@@ -38,9 +38,9 @@
 
 博士生可能认为学院不管他们是否成功取得博士学位，而事实上学院的的确确关心博士生的通过率，因为博士生的通过率太低会给学校带来负面的影响并且会影响学院获得赞助的多少。一种能减少学生在论文和答辩阶段的失败率并且简单有效的方法就是在他们到达这一痛苦棘手的阶段之前使之改变路线——如果他们尚未到达这一阶段的话自然也就不存在失败了。这个阶段被称为升级阶段。这个转折点介于第一学年末和博士学业的中途，到这个时候你已经为学术体制做了很多工作并且基于这些工作学术体制已经对你的能力有了客观公正的了解。（如果你没有足够努力，或者体制尚未对你的能力有一个公正的了解，那么这就意味若你比较笨拙，鉴于你比较笨拙，达不到完成任务的要求，因此你就不得不改变路线了。）在这个转折点，校方会通过正式的决议表明你应该着手博士论文的提交还是应该以另外一条途径获得其他的证书（注意这里并没有出现 “失败”的字眼）。升级是过渡到提交博士论文阶段的必要步骤。
 
-升级是一个很重要的阶段。一般情况下涉及对你的表现做出一些真实的学术评定。这通常需要你创造两件东西。其一是一份文件，该文件能体现： (1)你做了很多细致的工作； (2)你了解了包括描述和介绍作品在内的相关学术技能。其二是临场的表现，在答辩会或是学院的研讨会上，你能够向大家介绍你的研究成果，演示你准备的文件上的很多东西，这里涉及口头演说的技巧。非常巧合的是。这两者对于论文写作和论文答辩都可被视为是十分有用的训练。这些文件准备工作和口头陈述是为了展示你的能力——不是要求你尽善尽美，也不是要把你的研究计划具体化。
+升级是一个很重要的阶段。一般情况下涉及对你的表现做出一些真实的学术评定。这通常需要你创造两件东西。其一是一份文件，该文件能体现： （1）你做了很多细致的工作； （2）你了解了包括描述和介绍作品在内的相关学术技能。其二是临场的表现，在答辩会或是学院的研讨会上，你能够向大家介绍你的研究成果，演示你准备的文件上的很多东西，这里涉及口头演说的技巧。非常巧合的是。这两者对于论文写作和论文答辩都可被视为是十分有用的训练。这些文件准备工作和口头陈述是为了展示你的能力——不是要求你尽善尽美，也不是要把你的研究计划具体化。
 
-在评定升级之前，一些学生认定读博士并不适合自己。光荣的退出，或是接到可以选择攻读研究硕士 (MPhil）学位的通知，对于学生导师以及学术体制来说都是一种成功。对于所有的人来说。这样的选择比数年的焦虑和失败的经历要令人开心得多。
+在评定升级之前，一些学生认定读博士并不适合自己。光荣的退出，或是接到可以选择攻读研究硕士 （MPhil）学位的通知，对于学生导师以及学术体制来说都是一种成功。对于所有的人来说。这样的选择比数年的焦虑和失败的经历要令人开心得多。
 
 ### 小升级（The lesser transfer）
 
