--- a/10.Rmd
+++ b/10.Rmd
@@ -109,7 +109,7 @@
 * 我也知道其他相关文献，并正确地引用了它们；
 * 我知道并了解我所在领域内的所有技术性概念，并在我的成稿中谨慎使用了所有相关的技术性概念。
 
-### 我无知，不了解情况，我很绝望(在不小心就会传达出这样的信息，尤其是对二年级的博士生而言）
+### 我无知，不了解情况，我很绝望（在不小心就会传达出这样的信息，尤其是对二年级的博士生而言）
 
 * 我没有读过关键文献；
 * 我犯了我这个阶段的一些典型错误,却连自己都没有意识到；我没有想到应该把稿子交给某位能给我指出错误的前辈过目；
