--- a/03.Rmd
+++ b/03.Rmd
@@ -6,11 +6,11 @@
 
 学者的头衔、等级和角色的传统可以追溯到拜占庭帝国（Byrnn-tine Empire）甚至更早。以下的内容可以被当做一系列概括性的原则，而不是绝对真理。让我们先从最低的职位开始（也就是一个在研究团体看来仅仅比管理员和接受课程教育的学生略高一点的职位），然后再逐渐上升到最高职位。需要记住的很直要的一点是，尽管这些头衔为全世界所知所用，但同样的头衔在不同的大学经常有十分不同的用法。
 
-### 研究助理 (Research assistant)
+### 研究助理 （Research assistant）
 
 研究助理是被聘请来协助学术研究人员开展研究工作的人员。这个研究工作通常是为了某个研究课题而开展的，而这个研究课题之所以能够进行，是因为之前这个研究人员争取到该课题的科研经费。这意味着该研究课题有可能是提前就计划好了的，而且很可能是相当详细的计划。拿到研究经费的人很可能持有这样的观点：这项工程带来的任何荣耀（包括论文的最初原创作者）都应该归功于那个计划好这个项目并争取到研究经费，从而让这个项目得以实施的人（也就是他们自己八而研究助理则可能持不同的观点，争取研究经费的项目申请书中包含着大量似是而非的主张，这些东西如果没有进一步细节的工作，是无法转化为有意义的研究的。这些细节的工作都是由研究助理来完成的。因此在这项工程带来的任何荣耀（包括论文的最初原创作者）中都该有他们应得的一份。在这样的情况中，如果是刚刚修完一个学位的研究助理，在这场争辩中是不可能有发言资格的。博士后研究助理的情况可能会有些不同，但通常也不是完全不同的。
 
-### 博士后研究助理（Postdoctoral research assistant)
+### 博士后研究助理（Postdoctoral research assistant）
 
 博士后研究助理有自己的博士学位，他们在这个职位上会从一个没经验的新手慢慢成长为一名业务熟练的老手（对这个研究领域的了解至少和拿到研究经费的人相当）。
 
@@ -32,13 +32,13 @@
 
 在英国的研究序列中，普通教授的职位通常是向资深教授职位迈进的一个踏脚石。一般情况下，普通教授从这个位置往上爬是很快的，如果他们继续按照自已取得普通教授资格的方式工作的话——在核心学术期刊上发表论文、争取研究经费，并表示出还可能争取到更多经费的迹象。但也有不少人直接绕过这一阶段，因为不少大学赞成把普通教授看作一个试用阶段，而其他一些大学根本不愿意在这个上面多费周折。也有一些大学泛泛地把普通教授职位等同于资深研究员。
 
-### 资深研究员 (Proper research fellow)
+### 资深研究员 （Proper research fellow）
 
 通常是在一些非常显赫的历史悠久的大学。资深研究员是一个全职的、终身的研究职位。也是一个令人觊觎、享有相当高声望的职位。尽管其食宿待遇并不一定很好。
 
-### 资深教授 ( Professor）[^rdr_prf]
+### 资深教授 （ Professor）[^rdr_prf]
 
-资深教授也有许多不同的类型。要理解这一点。我们有必要提到一个头衔、一个职位和一个人三者之间的区别。有些人之所以是资深教授，是因为他们所处的职位给他们提供了一个较高的席位，比如说系主任一职就很有可能伴随着资深教授职位。还有些人之所以是资深教授，是因为他们成功地申请到了一个特殊的席位，一个有自己独立身份的席位，比如迪斯尼考古学席位 (Disney Chair of Archaeology)。其他的一些人之所以成为资深教授，是因为他们是多才多艺全面发展的人（也就是说，他们表现出来的学术潜质已经足以让他们自己给自己一个私人的“教授”头衔）。还有一些人是被其他大学授予荣誉教授的称号，这很有可能是这样的情况：某个人在这个大学是一个主要讲师，但他同时也兼任另外一个大学的荣誉教授。也有一些人是在自己所在的大学被授予资深教授的称谓，但却只是作为普通教授的身份被聘任。还有的是退休的荣誉教授，因为他们有过不少值得称赞的业绩，因而不能被忽略。
+资深教授也有许多不同的类型。要理解这一点。我们有必要提到一个头衔、一个职位和一个人三者之间的区别。有些人之所以是资深教授，是因为他们所处的职位给他们提供了一个较高的席位，比如说系主任一职就很有可能伴随着资深教授职位。还有些人之所以是资深教授，是因为他们成功地申请到了一个特殊的席位，一个有自己独立身份的席位，比如迪斯尼考古学席位 （Disney Chair of Archaeology）。其他的一些人之所以成为资深教授，是因为他们是多才多艺全面发展的人（也就是说，他们表现出来的学术潜质已经足以让他们自己给自己一个私人的“教授”头衔）。还有一些人是被其他大学授予荣誉教授的称号，这很有可能是这样的情况：某个人在这个大学是一个主要讲师，但他同时也兼任另外一个大学的荣誉教授。也有一些人是在自己所在的大学被授予资深教授的称谓，但却只是作为普通教授的身份被聘任。还有的是退休的荣誉教授，因为他们有过不少值得称赞的业绩，因而不能被忽略。
 
 如何成为一个资深教授，这是个复杂的问题。到我们的大部分读者真正达到这个崇高的职位的时候，那些基本程序肯定已经发生了巨大的变化。但这仍然是一个非常有趣而不容忽略的话题。从形式上来说，如今想要成为资深教授的人通常必须向一个评判小组提交申请表，还要遵循若干规章制度，包括应该提出一些证据来证明。哪些人可以出现在评判小组中，哪些不可以等等。最核心的问题是这个申请者应该有一系列完整连贯的著作，而且至少在全国范围内享有一定的重要影响力。此外诸如发表文章的频率、收入水平、指导的博士生完成学位的情况、学术角色等等一系列问题都是评判标准。在这个过程中，形式上的学术资格证明是没有人会去注意的。事实上，一些年长的教授根本就没有博士学位。
 
@@ -94,7 +94,7 @@
 
     在研究生中流传着很多传言，其中有一两个可能是真实的，但是大部分至多属于传言，甚至有些会产生危险的误导。如果对此有疑问的话，你最好去咨询一下你的导师，并且请他们解释为什么这些传言是不真实的。他们提供的答案可能帮你明白很多事情。
 
-    研究生最喜欢的事情之一就是与他人做比较然后因为“攀比”结果不满意而沮丧。这种思维游戏有益于销售巧克力（巧克力可以使人心情愉悦），除此没有什么其他益处。避免这种思维的有效方法之一就是撒谎（“噢！进展很顺利，谢谢关心——很多有趣的发现，写作也很顺利”)。这样就能非常迅速地阻止宿命论者向你传播其信条，劝说他们不再打扰你。
+    研究生最喜欢的事情之一就是与他人做比较然后因为“攀比”结果不满意而沮丧。这种思维游戏有益于销售巧克力（巧克力可以使人心情愉悦），除此没有什么其他益处。避免这种思维的有效方法之一就是撒谎（“噢！进展很顺利，谢谢关心——很多有趣的发现，写作也很顺利”）。这样就能非常迅速地阻止宿命论者向你传播其信条，劝说他们不再打扰你。
 
 ### 物
 
