fix(ocr-issue): correct "博土" as "博士"
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/02.Rmd
+++ b/02.Rmd
@@ -30,7 +30,7 @@
 
 ### 年度报告（The annual report）
 
-攻读博土的每个学年，大多数学院都会要求你的研究生导师每年交一个报告概括你当年所取得的进步，评估你继续完成学业的潜能并且提出你能否继续下一学年学习的建议。有个很明智的策略，即找出你上一年度的报告，在填写当年报告的时候清楚地写明你所取得的进步一委员会的相关人员很有可能会对照去年的报告来审查今年，有点像是在玩“找差别”的游戏。
+攻读博士的每个学年，大多数学院都会要求你的研究生导师每年交一个报告概括你当年所取得的进步，评估你继续完成学业的潜能并且提出你能否继续下一学年学习的建议。有个很明智的策略，即找出你上一年度的报告，在填写当年报告的时候清楚地写明你所取得的进步一委员会的相关人员很有可能会对照去年的报告来审查今年，有点像是在玩“找差别”的游戏。
 
 ### 升级（Transfer）
 
@@ -66,4 +66,4 @@
 
 ## 博士的标准
 
-博士生常常担心他们的研究是否足以获得博士学位。记住大多数大学的博士学位评估的核心标准（原创性和对知识的重要贡献）是十分有用的。很巧的是，绝大多数的期刊和会议的成功稿件常常能够达得“原创性和对知识的重要贡献”的标准。因此，你可以在提交论文之前将你的文章在指定的期刊或讨论会文集上发表，以此来证明你的“重要性”、“独创性”和“对知识的贡献”。本书后边还有很多篇幅会谈及这个话题。你并不是非要有重大的发现才能获得博土学位——你只需要表现你能够很好地进行独立研究。
+博士生常常担心他们的研究是否足以获得博士学位。记住大多数大学的博士学位评估的核心标准（原创性和对知识的重要贡献）是十分有用的。很巧的是，绝大多数的期刊和会议的成功稿件常常能够达得“原创性和对知识的重要贡献”的标准。因此，你可以在提交论文之前将你的文章在指定的期刊或讨论会文集上发表，以此来证明你的“重要性”、“独创性”和“对知识的贡献”。本书后边还有很多篇幅会谈及这个话题。你并不是非要有重大的发现才能获得博士学位——你只需要表现你能够很好地进行独立研究。
