--- a/04.Rmd
+++ b/04.Rmd
@@ -1,6 +1,6 @@
 # 导师
 
-从你成为博士研究生的那一刻起，你就开始与导师形成了一种非常密切的关系。这种关系既包括私人方面的关系也包括学术方面的关系。学生与导师之间的关系可能会与你以前与老师的关系有所不同，因为作为研究生，你不但衙要占用导师很多时间，而且需要花费导师的精力。你不能像以前普通上课那样，为了保持低姿态或其他原因，藏在同学中默默无闻；作为博土研究生，你需要表现自己，展示自己。
+从你成为博士研究生的那一刻起，你就开始与导师形成了一种非常密切的关系。这种关系既包括私人方面的关系也包括学术方面的关系。学生与导师之间的关系可能会与你以前与老师的关系有所不同，因为作为研究生，你不但衙要占用导师很多时间，而且需要花费导师的精力。你不能像以前普通上课那样，为了保持低姿态或其他原因，藏在同学中默默无闻；作为博士研究生，你需要表现自己，展示自己。
 
 与此同理，你的导师对你非常重要。与你本科时期的论文写作指导老师不同，他不再是你的众多导师中的一员，而是你唯一的指导教师。
 
@@ -38,7 +38,7 @@
 
 不管导师的动机如何，彼此相处融洽对双方都有好处。遇到一件具体的事情，不管从道德上讲谁是谁非，为了自己的利益你应该维持和睦的师生关系；如果论文不能通过，拿不到博士学位，这对你而言将是个灾难，而对你的导师而言可能没有这么严重。所以我们建议在处理与导师的关系的时候，你需要采取一些策略，而不是期望导师一直采取主动，一直领着你向前走。一般情况下，你要学着从他们的角度看问题。如果有人要你去指导一篇本科生论文，你希望指导哪一类学生呢？无论如何不想指导哪一类学生呢？一旦你把这个问题想通了，试着从这个角度来审视一下自己的表现：你有多少次没有出席会议？有多少次迟到？多少次没有任何准备就来开会？多少次希望导师把所有的事情都想到？
 
-最终对你论文负责的人应该是你，而不是你的指导教师。在这种导师与学生间监督与被监督的关系中，作为学生，你要承担起自己的那份责任，这点对于论文写作和答辩都很有帮助。因为论文答辩时，学生必须承担传达信息的责任如果评审人认为主题不清楚的话，这是学生的问题，而不是评审人的问题。所以在与导师的交流过程中，练习自己传达信息的能力。明确你希望从博土学位课程中学到哪些知识，希望从单独见面会中学到哪方面的知识，并且把你的想法汇报给你的导师。
+最终对你论文负责的人应该是你，而不是你的指导教师。在这种导师与学生间监督与被监督的关系中，作为学生，你要承担起自己的那份责任，这点对于论文写作和答辩都很有帮助。因为论文答辩时，学生必须承担传达信息的责任如果评审人认为主题不清楚的话，这是学生的问题，而不是评审人的问题。所以在与导师的交流过程中，练习自己传达信息的能力。明确你希望从博士学位课程中学到哪些知识，希望从单独见面会中学到哪方面的知识，并且把你的想法汇报给你的导师。
 
 和婚姻关系一样，师生关系的培养很值得付出努力，因为这种关系很可能至少持续三年的时间，和导师建立起和睦的师生关系也会对你的职业很有裨益。同样，和婚姻一样，时不时想到导师也是普通人这点也很重要——他们也有不开心的日子，他们也有自己的弱点。现实一点，如果导师在哪方面没有达到你的期望值，或者让你失望的话，学会原谅这些。这样你才会更有机会和导师最终形成不错的关系。
 
@@ -46,7 +46,7 @@
 
 通常情况下，试着从他人的角度看问题，很多答案就会变得非常明显。导师们是积极的研究型学者，而研究型学者都是非常可怕的工作狂，习惯于过度工作。指导博士研究生占用时间，时间又是最匮乏的资源，从这个意义上讲，指导工作就是义务，或更确切地说是债务。聪明的学生会减少他们的负债额度，优秀的学生会找出方法使自已成为积极的资产，而非消极资产。
 
-减少负债额度，主要涉及职业礼貌问题。博土学位是你的学位，而不是你导师的学位。如果不是你努力工作完成课程拿到学位的话，他们有什么理由比你更努力呢？努力学习包括充分重视导师见面会：你应该主动安排这些见面会，提前发布一些相关信息，起草一份日程表，准备一整套报告材料和准备提出的问题等。有一点容易被人忽视，那就是你应该学会做会议记录，记录会议上通过的决议以及决定实施的措施，在会议结束后分发会议备忘录，然后核查措施是否已经付诸实施。与此相关的是，很多组织都要求为此研究计划做会议日志。
+减少负债额度，主要涉及职业礼貌问题。博士学位是你的学位，而不是你导师的学位。如果不是你努力工作完成课程拿到学位的话，他们有什么理由比你更努力呢？努力学习包括充分重视导师见面会：你应该主动安排这些见面会，提前发布一些相关信息，起草一份日程表，准备一整套报告材料和准备提出的问题等。有一点容易被人忽视，那就是你应该学会做会议记录，记录会议上通过的决议以及决定实施的措施，在会议结束后分发会议备忘录，然后核查措施是否已经付诸实施。与此相关的是，很多组织都要求为此研究计划做会议日志。
 
 负责会议安排并且保证其顺利召开不是人人都有能力做好，所以我们在这里总结了以下关键点这些技巧在各行各业都被视为颇有应用价值。
 
