--- a/13.Rmd
+++ b/13.Rmd
@@ -180,7 +180,7 @@ n$\geq$50：调查研究
 
 如果你不能确定研究的重心应该放在哪儿，那么你该怎么办呢？有一个办法可以将问题区域减小到可以掌控的尺度，那就是使你的研究包含一系列的组成部分。如果你是个新手，或者感到紧张，可以从研究的其中一个部分开始着手。
 
-除了作规划之外，另一个专家们擅长的技能就是把事情整合起来。比方说，如果你的研究涵盖若干部分，很快你就会没了头绪。在这种情况下，一个很有效的办法是分配任务。比如，你可以让你的博土生负责监督与他研究课题相关的某些本科生项目，而这些项目则又是构成你的研究的若干部分之一。
+除了作规划之外，另一个专家们擅长的技能就是把事情整合起来。比方说，如果你的研究涵盖若干部分，很快你就会没了头绪。在这种情况下，一个很有效的办法是分配任务。比如，你可以让你的博士生负责监督与他研究课题相关的某些本科生项目，而这些项目则又是构成你的研究的若干部分之一。
 
 ### 道德规范
 
