--- a/14.Rmd
+++ b/14.Rmd
@@ -32,7 +32,7 @@
 
 假设校外评审人正在检查你是否学会了怎样做“橱柜”，他们会怎样开始着手呢？
 
-正常情况下，在你见到他们之前故事就已经开始了。在你博士生涯的某一时刻，你和你的导师要选择一个校外评审人。对于一些博士，这件事情在他们上博士之前就已经开始；对于其他博土，则在开始写作的时候才开始。对于大多数人，则在读博士的最后一年左右。在选择校外评审的时候有不同的因素。他们不应该和你有利害关系举例说来，如果他们和你合作申请诺贝尔奖，那么他们就有现实的动机保证你的论文通过，不管你的真实水平如何。
+正常情况下，在你见到他们之前故事就已经开始了。在你博士生涯的某一时刻，你和你的导师要选择一个校外评审人。对于一些博士，这件事情在他们上博士之前就已经开始；对于其他博士，则在开始写作的时候才开始。对于大多数人，则在读博士的最后一年左右。在选择校外评审的时候有不同的因素。他们不应该和你有利害关系举例说来，如果他们和你合作申请诺贝尔奖，那么他们就有现实的动机保证你的论文通过，不管你的真实水平如何。
 
 选定校外评审后，评审们的日子还会正常继续，直到你的论文和相关的评审表格放到邮筒里。他们会怎样处理你的论文和相关表格呢？那取决于不同情况。大多数校外评议会详细阅读论文至少一次。很多人会逐行阅读，逐页作记录。他们会很认真地阅读参考文献和附录。他们会检查参考书目，或者看起来并不正确的观点。他们或者会在某部参考文献上作记号，因为这本书十分有趣。然后接着向前翻看。也有另外一种情况，总是不断会有关于校外评审的故事，说他们在来参加答辩的火车上才读论文。不管怎样，你希望他们的内心反应是一样的：你希望他们在思考的时候带着善意并认为你的论文还不坏。因此，想办法使他们第一次看到论文就觉得是一篇可靠的文章——每一页，从包括导论的第二页、参考书目、结论都是可靠的。
 
