--- a/append.Rmd
+++ b/append.Rmd
@@ -84,7 +84,7 @@ Periodical
 :   一本定期发行的出版物，通常是一年出版几次。例如学刊或者杂志，和一次性出版的书籍不同。
 
 PhD
-:   拉丁文学“博土”（philosophiae doctor）的正式缩写。是普通高等大学所授予的最高学位，通常学生要完成一篇特定领域的论文，并且顺利通过论文答辩才能够获得此学位。
+:   拉丁文学“博士”（philosophiae doctor）的正式缩写。是普通高等大学所授予的最高学位，通常学生要完成一篇特定领域的论文，并且顺利通过论文答辩才能够获得此学位。
 
 Professor
 :   最高学术头衔（相对于行政），资深教授通常都获得了博士学位，但这并不是必需的。资深教授相当于一个传统部落中地位很高的老者，而如果在40岁以前就成为一名资深教授，那就是年轻有为的标志。
