--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ knit: "bookdown::render_book"
 
 我们关注的大部分问题是那些通常被称作隐性知识的内容————这些知识、没有人愿意明确地告诉你，因为他们认为你已经知道；或者因为他们已经对这些知识太过熟悉，以致忘记了其他人也许并不知道；抑或是因为他们认为这些知识不值得提起。作者通常会认为这些东西应该会被导师们在一些不是很正式的场合提到。在理想的世界中，的确应当如此，但现实情况是：导师们也都是普通人，他们并非没有缺点，而且他们工作都很忙，所以难免会有所疏漏。我们所做的就是把这些没有写下来的规则做一个概述和总结，以便让你对现实情况有一个更深人的了解。这样，你就可以向你的导师询问，你所从事的学科是怎样运行的；运气好的话，你可以从导师那里得到很多可靠并且明确的指导。
 
-按照我们的经验，博士生通常会在两类问题上遇到麻烦。一类是，学术系统怎样运行，以及为什么这样运行之类的大问题。例如：学术界一些杰出人物的特殊经历和职业发展道路是怎样的？为什么学术文章的写作如此枯燥？为什么有的人博土还没有毕业就可以在非常好的院系获得讲师职位，而另外一些人在获得博士学位十年以后仍然要为找到一个工作而奋斗？一个好的院系的评价标准是什么？为什么？有的学生害怕问这些问题会显得很无知，更多学生则是因为过于关注与博士学位直接相关的问题，而没有去考虑得更加长远，当他们意识到的时候，一切都晚了。
+按照我们的经验，博士生通常会在两类问题上遇到麻烦。一类是，学术系统怎样运行，以及为什么这样运行之类的大问题。例如：学术界一些杰出人物的特殊经历和职业发展道路是怎样的？为什么学术文章的写作如此枯燥？为什么有的人博士还没有毕业就可以在非常好的院系获得讲师职位，而另外一些人在获得博士学位十年以后仍然要为找到一个工作而奋斗？一个好的院系的评价标准是什么？为什么？有的学生害怕问这些问题会显得很无知，更多学生则是因为过于关注与博士学位直接相关的问题，而没有去考虑得更加长远，当他们意识到的时候，一切都晚了。
 
 另一类则是技巧层面的问题。有一些比较低层次的技术问题，通常被看得不是那么重要，而没有书谈及。这些学科内的技巧一般都是导师或者是讲师在平时传授的。这类问题从一些十分具体的信息（例如“我在文章的第一段中应当提到几条参考文献？”）到一般的经验法则（rules of thumb）（例如“我如何才能够在没有刻苦阅读文献的情况下，对导师给我的题目有一个清晰而完整的认识？”）。这些特定的技巧以及答案会因学科的不同而不同，但是一旦你学到了这些技巧层面的基本概念，你马上就可以找到自己学科的诀窍所在，并很快学会它。
 
