fix(ocr-issue): fix "人" as "入"
fix #1

Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/01.Rmd
+++ b/01.Rmd
@@ -91,7 +91,7 @@
 
 ### 学会运用外交手腕
 
-作为一个博士生，你必须接受这样的事实——你所在的位置并非是学术等级的最顶端，而一个刚人学的博士生只不过是初出茅庐的新手。因此在开始的一段时间里，你有必要规矩和低调一些，只有这样你才能够学到一些想要的东西。博士生通常喜欢抱怨学术体制是如何不好等等，却忘记了这个学术系统的悠久的历史几乎可以追溯到欧洲中世纪——因此在其如此长的历史进程中必然形成了一两套应对抱怨的方法。一个很重要的技巧是：对于一个问题，要知道什么时候不加计较，而什么时候应该坚持到底（机敏、礼貌但坚定）。否则你会发现自己赢了小战役却丢了大战场。比如你很可能会抱怨学校的图书馆有若干缺点，而几乎世界各地的博士生都对图书馆有不少抱怨，但这些抱怨通常都是站不住脚的。因此，如果你在这个问题上比较刁蛮的话，是不大可能博取到同情的。（“图书馆关于我研究方向的书太少了”通常被理解为“我还不知道眼下我应该读些学术期刊上的文章”。）在你所在学院开设的针对研究生的培训课程中会教给你不少研究方法，对这些研究方法的含金量你可能会有些怀疑，但跟一个负责该课程的教授发生激烈的意见冲撞是不太可能有什么好结果的。相比之下，提一些措辞委婉、顾全面子的建议更有可能达到预期的效果。还需要记住的一点是：大部分博士生都清楚地知道他们想要什么，而不是他们需要什么——这两者之间的差别有时候是巨大的。所以我们需要掌握以下重要技巧。
+作为一个博士生，你必须接受这样的事实——你所在的位置并非是学术等级的最顶端，而一个刚入学的博士生只不过是初出茅庐的新手。因此在开始的一段时间里，你有必要规矩和低调一些，只有这样你才能够学到一些想要的东西。博士生通常喜欢抱怨学术体制是如何不好等等，却忘记了这个学术系统的悠久的历史几乎可以追溯到欧洲中世纪——因此在其如此长的历史进程中必然形成了一两套应对抱怨的方法。一个很重要的技巧是：对于一个问题，要知道什么时候不加计较，而什么时候应该坚持到底（机敏、礼貌但坚定）。否则你会发现自己赢了小战役却丢了大战场。比如你很可能会抱怨学校的图书馆有若干缺点，而几乎世界各地的博士生都对图书馆有不少抱怨，但这些抱怨通常都是站不住脚的。因此，如果你在这个问题上比较刁蛮的话，是不大可能博取到同情的。（“图书馆关于我研究方向的书太少了”通常被理解为“我还不知道眼下我应该读些学术期刊上的文章”。）在你所在学院开设的针对研究生的培训课程中会教给你不少研究方法，对这些研究方法的含金量你可能会有些怀疑，但跟一个负责该课程的教授发生激烈的意见冲撞是不太可能有什么好结果的。相比之下，提一些措辞委婉、顾全面子的建议更有可能达到预期的效果。还需要记住的一点是：大部分博士生都清楚地知道他们想要什么，而不是他们需要什么——这两者之间的差别有时候是巨大的。所以我们需要掌握以下重要技巧。
 
 ### 找对与你一起喝咖啡的那个人
 
