--- a/08.Rmd
+++ b/08.Rmd
@@ -1,6 +1,6 @@
 # 写作
 
-如果你是一个经验丰富的学者，有人试图说服你收某个你从未听说过的人做你的博士生，那么你想要了解的第一件事就是这个人的写作能力如何。写作能力指的是：有能力用质最好的、学术性的语言写作，最好可以根据不同情况用不同风格写作，从学术期刊文章到为争取可能的资助人而写的公开信，都应该能够应对。如果那个学生的写作能力较差，那么极力说服你收那个学生的人在与你的交涉中就会处于绝对的劣势，因为任何理性的人都不会对指导一个写作能力较差的博士生太感兴趣。值得指出的一点是：质量好的学术性英语和正式的符合语法的英语不是一回事我们遇到过很多学生，他们能写质量非常高的学术性英语文章，但他们的母语并不是英语，他们的英语语法在某些方面还存在着错误。相反的，很多母语是英语的学生，学术写作的水平却令人担忧。
+如果你是一个经验丰富的学者，有人试图说服你收某个你从未听说过的人做你的博士生，那么你想要了解的第一件事就是这个人的写作能力如何。写作能力指的是：有能力用质量好的、学术性的语言写作，最好可以根据不同情况用不同风格写作，从学术期刊文章到为争取可能的资助人而写的公开信，都应该能够应对。如果那个学生的写作能力较差，那么极力说服你收那个学生的人在与你的交涉中就会处于绝对的劣势，因为任何理性的人都不会对指导一个写作能力较差的博士生太感兴趣。值得指出的一点是：质量好的学术性英语和正式的符合语法的英语不是一回事我们遇到过很多学生，他们能写质量非常高的学术性英语文章，但他们的母语并不是英语，他们的英语语法在某些方面还存在着错误。相反的，很多母语是英语的学生，学术写作的水平却令人担忧。
 
 那么，高质量的学术性英语究竟是什么样的？它又为什么不同于正式的英语语法？这一章讨论的就是这个主题。我们将会谈到如何建构写作框架，如何从文章的字里行间传达正确的信息，在遇到诸如写不下去的情况时又该如何应对。
 
