Correct long dashes
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/08.Rmd
+++ b/08.Rmd
@@ -8,7 +8,7 @@
 
 ## 学术期刊论文
 
-虽然这部分讨论的重点是学术期刊论文，其中很多原则也同样适用于会议发言稿或其他类型的准备发表的作品，比如书的章节。我们之所以选用期刊论文作为讨论的对象，是因为发表期刊论文一般被视为你已经是一个真正意义上的学者的标志一人们普遍认为，除学术期刊以外的出版物在选取文章和质量监控方面参差不齐，学术期刊却总是独一无二、有洞察力的。这种看法当然并不完全正确，但可以作为一个有用的衡量尺度。如果你有志于学术事业，希望能给你的简历增光添色，你就更应该重视学术期刊论文的写作。
+虽然这部分讨论的重点是学术期刊论文，其中很多原则也同样适用于会议发言稿或其他类型的准备发表的作品，比如书的章节。我们之所以选用期刊论文作为讨论的对象，是因为发表期刊论文一般被视为你已经是一个真正意义上的学者的标志————人们普遍认为，除学术期刊以外的出版物在选取文章和质量监控方面参差不齐，学术期刊却总是独一无二、有洞察力的。这种看法当然并不完全正确，但可以作为一个有用的衡量尺度。如果你有志于学术事业，希望能给你的简历增光添色，你就更应该重视学术期刊论文的写作。
 
 导师们对学生为学术期刊写文章有不同的看法。有的认为这是一件好事，并鼓励学生去做；有的认为这是一件坏事，不鼓励学生去做；还有的认为在某些情况下这是一件好事，在某些情况下却未必（如果一个学生的博士论文下周二就要交稿，他就应该把每一分每一秒的时间都用在博士论文上，而不是去写期刊论文）。
 
