--- a/08.Rmd
+++ b/08.Rmd
@@ -16,7 +16,7 @@
 
 ### 在哪里发表
 
-要考虑的第一个问题就是在哪里发表．这涉及以下几方面的因素：期刊的声誉、读者群、你选的课题是否适合该期刊的侧重点、该期刊接受投稿的比例是多少。一个基本战略是挑选最有声誉的、同时又比较有可能发表你的文章的期刊。这就又涉及如何预测可能性的问题。与知情的内行坐下来喝一杯咖啡是一个很好的策略。
+要考虑的第一个问题就是在哪里发表。这涉及以下几方面的因素：期刊的声誉、读者群、你选的课题是否适合该期刊的侧重点、该期刊接受投稿的比例是多少。一个基本战略是挑选最有声誉的、同时又比较有可能发表你的文章的期刊。这就又涉及如何预测可能性的问题。与知情的内行坐下来喝一杯咖啡是一个很好的策略。
 
 考虑了以上这些因素之后，你需要做一些基本的功课，而忽视这些基本功课的人在所有有志成为学者的人群中占惊人的比例。第一项功课就是阅读你所选的期刊为其投稿人写的投稿须知。投稿须知一般会印在期刊上，发布在期刊的网站上，或者从期刊的编辑那里得到。从投稿须知中，你能了解到文章的字数限制、图表的制作流程，以及你需要寄出的论文复印件的份数。这些规定都是有意义的。如果你遵守这些规定，编辑对你持正面看法的可能性就会高些。无端地和编辑对着干是愚蠢的。以下我们将会解释每一条规定的设定目的，并给出提高投稿命中率的若干办法。
 
@@ -34,7 +34,7 @@
 
 审阅人可能会在你的稿件上划划改改，也有可能不那么做。然而文字编辑却一定会在你的搞件上留下修改记号。有些稿件看起来非常干净（也就是错误很少）以至于仅凭这一点就给编辑们留下了深刻印象。然而大多数的稿件都需要进行较多的文字编辑，其中的错误往往出现在对参考文献的引用上（比如引用的文献在论文中标注的出版年份与在参考书目中标注的出版年份不一致）。因为这个原因，文稿必须是两倍行距的，以便文字编辑以及审阅人作注和修改。如果你寄出一份单倍行距的文稿，那就说明你是个业余人士，根本不了解情况。
 
-投稿须知还会规定．你投寄出的文章不可以是已经向其他出版机构投寄了的。如果你同时向两家或更多的期刊寄出同一篇文章，并被发现（可能性很大，因为一个领域内的审阅人数量有限），那么你就会被这些期刊列人黑名单（也就是永远不能在这些期刊发表文章）。这么做的原因是，向多家期刊投一篇稿件会浪费所有相关工作人员的时间，而且如果两家期刊同时发表了这篇文音，就会涉及版权等法律问题。编辑和其他人一样讨厌被法律纠纷缠身。投寄不同的稿件，或者阐述同一个课题的不同方面，这些做法是被允许的，但你还是要注意稿件间的差异性是否足够大——如果两篇稿件看起来很相似，编辑们很可能会不赞同。
+投稿须知还会规定，你投寄出的文章不可以是已经向其他出版机构投寄了的。如果你同时向两家或更多的期刊寄出同一篇文章，并被发现（可能性很大，因为一个领域内的审阅人数量有限），那么你就会被这些期刊列人黑名单（也就是永远不能在这些期刊发表文章）。这么做的原因是，向多家期刊投一篇稿件会浪费所有相关工作人员的时间，而且如果两家期刊同时发表了这篇文音，就会涉及版权等法律问题。编辑和其他人一样讨厌被法律纠纷缠身。投寄不同的稿件，或者阐述同一个课题的不同方面，这些做法是被允许的，但你还是要注意稿件间的差异性是否足够大——如果两篇稿件看起来很相似，编辑们很可能会不赞同。
 
 ### 接下去怎么做
 
@@ -51,7 +51,7 @@
 :   你的文章被接受之后，期刊的文字编辑将与你联系。文字编辑对你文章的学术内容丝毫不感兴趣，他关心的只是文章的外观。他的职责就是保证你的文章拼写正确、符合语法、标点符号使用无误、正文和表格中提到的数据是否前后一致。文字编辑在发现一些有出人或遗漏的参考文献信息、正文和表格中数据不统一等情况时，将寄给你一份需要你澄清的问题清单。典型的问题清单是类似这样的：“第8页第7行引用了史密斯1999，然而参考书目中显示的是史密斯1998，哪一个是正确的？”要回答这类问题可不轻松，你必须要再找出原文来核对。水平高的、经验丰富的研究员通常会在收到文字编辑来信的当天就对其所有疑问给予完整的答复，这种做法很受文字编辑的赞赏。新手往往做不到这一点，他们在核对原文的痛苦过程中将会更加深刻地领悟：为什么导师如此强调参考文献的信息必须记录准确。如果文字编辑花了大量时间来修改你的论文，你可能就要为这部分时间支付费用（文字编辑的时间可是不便宜的），所以少犯错误也是有经济效益的。
 
 图表
-:   图表方面常常存在一些问题，使投稿人和期刊编辑双方都不愉快。我们在这里把图和表放在一起讲，因为它们的问题很相似。由于某些技术原因，很多出版社的印刷商分开处理图表和文字，最后再将图表插入到文字部分，还有一些印刷商却不这么做。写给投稿人的投稿须知会清楚地告诉你应该怎样处理图表。很多期刊都会要求将图表单独列出，附在正文后面，并在正文中需要插入表格的位置上标出记号，注明表格序号（通常是空一行．在需要加入表格的确切位置上画一条线，注上“表格1在此”）。如果你违反规定，将表格写在了正文中，你不是被要求用正确的格式重写文章，就是要面对文章发表后极不整洁的版面效果。你的文章的文字部分将非常整洁漂亮，而夹杂在其中的图表却像在泥里浸过一样，与在同一期刊登的其他文章中整洁专业的图表形成鲜明的反差。你当然可以告诉编辑组，在这个电子出版时代，解决这个问题的技术含最最高的方法应该是使用图文混排的电子文档，但这么说其实是很不识趣的。你应该问问自己，编辑组选择了他们目前所使用的这一套出版流程是因为他们不知道有更先进的技术存在，还是因为可能有其他方面的，为你所不知的因素致使他们必须选择目前使用的技术。
+:   图表方面常常存在一些问题，使投稿人和期刊编辑双方都不愉快。我们在这里把图和表放在一起讲，因为它们的问题很相似。由于某些技术原因，很多出版社的印刷商分开处理图表和文字，最后再将图表插入到文字部分，还有一些印刷商却不这么做。写给投稿人的投稿须知会清楚地告诉你应该怎样处理图表。很多期刊都会要求将图表单独列出，附在正文后面，并在正文中需要插入表格的位置上标出记号，注明表格序号（通常是空一行，在需要加入表格的确切位置上画一条线，注上“表格1在此”）。如果你违反规定，将表格写在了正文中，你不是被要求用正确的格式重写文章，就是要面对文章发表后极不整洁的版面效果。你的文章的文字部分将非常整洁漂亮，而夹杂在其中的图表却像在泥里浸过一样，与在同一期刊登的其他文章中整洁专业的图表形成鲜明的反差。你当然可以告诉编辑组，在这个电子出版时代，解决这个问题的技术含最最高的方法应该是使用图文混排的电子文档，但这么说其实是很不识趣的。你应该问问自己，编辑组选择了他们目前所使用的这一套出版流程是因为他们不知道有更先进的技术存在，还是因为可能有其他方面的，为你所不知的因素致使他们必须选择目前使用的技术。
 
 校样
 :   下一个关键阶段涉及校样。校样是印刷厂出的初印稿，体现了你的稿子最终刊登在期刊上时的视觉效果。由于技术和物流方面的原因，校样在出版前的最后一刻才出来，作者在收到校样后必须在一个规定的、极短的时间内完成核对，并将核对后的校样再寄到编辑部，从收到校样到再次寄出校样通常仅24小时到三天的时间。你可以考虑一下这种流程可能会引起的问题，比如你因为正在外地度假而没有收到校样，而碰巧校样上有一个后果严重的打印错误，让你看起来像一个笨蛋或学术上的江湖骗子，那你该怎么办？你还可以考虑一下你对修改核对稿件懂得多少，你是否能用合理的方式指出打印错误（比如如果你在校样上写上了这样的评语“这应该是‘24’，你这个白痴”，没想到这句评语也被刊登了出来）。校样寄给作者时，般还附有帮助作者进行修改的指导性内容。但是如果能在正式进人这一阶段之前不是那么紧急的情况下进行一些校样修改的训练，这将对你很有帮助（与往常一样，与一位有经验的同事坐下来喝一杯咖啡会很有用——他们可能会向你透露，哪位秘书在文字编辑和校对方面最为擅长，你可以向这些行家讨教经验）。如果你估计在你外出时可能会有校样寄到，你可以让你的同事帮忙留意你的邮箱。
