--- a/08.Rmd
+++ b/08.Rmd
@@ -57,7 +57,7 @@
 :   下一个关键阶段涉及校样。校样是印刷厂出的初印稿，体现了你的稿子最终刊登在期刊上时的视觉效果。由于技术和物流方面的原因，校样在出版前的最后一刻才出来，作者在收到校样后必须在一个规定的、极短的时间内完成核对，并将核对后的校样再寄到编辑部，从收到校样到再次寄出校样通常仅24小时到三天的时间。你可以考虑一下这种流程可能会引起的问题，比如你因为正在外地度假而没有收到校样，而碰巧校样上有一个后果严重的打印错误，让你看起来像一个笨蛋或学术上的江湖骗子，那你该怎么办？你还可以考虑一下你对修改核对稿件懂得多少，你是否能用合理的方式指出打印错误（比如如果你在校样上写上了这样的评语“这应该是‘24’，你这个白痴”，没想到这句评语也被刊登了出来）。校样寄给作者时，一般还附有帮助作者进行修改的指导性内容。但是如果能在正式进人这一阶段之前不是那么紧急的情况下进行一些校样修改的训练，这将对你很有帮助（与往常一样，与一位有经验的同事坐下来喝一杯咖啡会很有用——他们可能会向你透露，哪位秘书在文字编辑和校对方面最为擅长，你可以向这些行家讨教经验）。如果你估计在你外出时可能会有校样寄到，你可以让你的同事帮忙留意你的邮箱。
 
 其他相关注意事项
-:   还有一些相关注意事项。首先，你寄出的复印稿必须是你寄出的电子文档的无差别打印版本。如果编辑组发现你做了改动，电子文档和原件之间存在差异，他们会极其气恼。第二点，在校对时不要对文章内容进行改动——只有印刷错误才需要更正。如果你擅自添了几个词，这在排版上会引起连锁反应，影响到后面儿页的版面效果，还会大大提高印刷成本。编辑们在改动的显和文章页数上都有预算限制，所以如果你擅自添加内容而使他们的这两项预算超支，他们会对你很不满意。
+:   还有一些相关注意事项。首先，你寄出的复印稿必须是你寄出的电子文档的无差别打印版本。如果编辑组发现你做了改动，电子文档和原件之间存在差异，他们会极其气恼。第二点，在校对时不要对文章内容进行改动——只有印刷错误才需要更正。如果你擅自添了几个词，这在排版上会引起连锁反应，影响到后面几页的版面效果，还会大大提高印刷成本。编辑们在改动的显和文章页数上都有预算限制，所以如果你擅自添加内容而使他们的这两项预算超支，他们会对你很不满意。
 
 在这里还需要指出的一点是：文字编辑们其实是比较人性的，所以如果你有什么不明白的地方，可以打电话或发电子邮件给他们，与他们展开建设性的讨论。（他们一般总有紧迫的任务缠身，要与他们联系的话，打电话这种快捷的方式比寄信管用的多。）传真在交换局部修改意见时非常有用——你可以把自己的修改意见和说明标注在需要改动的文稿上，并将其传真给文字编辑。
 
