--- a/08.Rmd
+++ b/08.Rmd
@@ -113,7 +113,7 @@
 * 你有明确的研究问题吗？
 * 你证明了问题的有趣性吗？
 * 你证明了问题的重要性吗？
-* 你证明了答案不是平淡元奇的吗？
+* 你证明了答案不是平淡无奇的吗？
 * 你的“叙述线索”清晰可见吗？你的论证清晰有条理吗？
 
 ### 将你的论文放到学术研究的大环境中去考察
