--- a/08.Rmd
+++ b/08.Rmd
@@ -142,7 +142,7 @@
 * 你引用了经典文献吗？
 * 你引用了基础性文献吗？
 * 你论文第一页上的引用达到了五处以上吗？
-* 你仗用的文献的时间跨度是否是从开创某领域的研究到新进的研究发展？
+* 你使用的文献的时间跨度是否是从开创某领域的研究到新进的研究发展？
 * 你是否引用了一些特殊的文献，能体现出你了解超出某个课题标准文献之外的信息？
 
 ### 发表在哪里？
