Fix vital errors
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/08.qmd
+++ b/08.qmd
@@ -4,7 +4,7 @@
 
 那么，高质量的学术性英语究竟是什么样的？它又为什么不同于正式的英语语法？这一章讨论的就是这个主题。我们将会谈到如何建构写作框架，如何从文章的字里行间传达正确的信息，在遇到诸如写不下去的情况时又该如何应对。
 
-这一章与第六章关于阅读的讨论有很多重叠的内容，所以如果你正打算着手写作，我们建议你可以再读一遍[阅读]这一章。
+这一章与第六章关于阅读的讨论有很多重叠的内容，所以如果你正打算着手写作，我们建议你可以再读一遍 @sec-reading。
 
 ## 学术期刊论文
 
