--- a/index.qmd
+++ b/index.qmd
@@ -1,17 +1,9 @@
 ---
-title: "给研究生的学术建议"
-subtitle: "The Unwritten Rules of Ph.D. Research"
-author:
-- （英）戈登·鲁格 玛丽安·彼得【著】
-- 彭万华【译】 彭凯平【校】
-- 张亮【编】
-date: "英文版发布于2004年，中文版发布于2009年"
-github-repo: psychelzh/phdrule
-site: "bookdown::bookdown_site"
-knit: "bookdown::render_book"
+description-meta: |
+  This book is OCR results from a scanned version of the original book.
 ---
 
-# 前言 {-}
+# 前言 {.unnumbered}
 
 研究生们毕业以后常常会发出这样的感叹：“为什么没有人早点告诉我这些呢？”有很多东西，如果早点得知，就可以少点困惑、失望、痛苦和泪水了。但是，在现实中，却没有人愿意将这些事情告诉你，或者写到教科书中去。
 
@@ -21,7 +13,7 @@ knit: "bookdown::render_book"
 
 本书作者有着各种不同的背景。他们的学术简历上写着博士，他们发表了各种期刊论文，是高层次的学术研究团体的成员、学术期刊编缉、核心期刊和科研基金的评审人，以及上百万英镑科研基金的捐赠者。多年来，他们与许多学生都保持着联系，为他们提供建议，并得到了极高的赞誉。
 
-# 使用本书须知 {-}
+# 使用本书须知
 
 我们曾经花了很多时间去帮助博士生们解决问题，也曾为那些将要成为博士生并且希望避免类似问题的人提供过建议。他们中的大部分人都已经读过诸如《怎样获得博士学位》（*How to get a PhD*）这一类的书，也曾得到来自导师的好建议。现在的问题并不是关于这些书和建议，因为这方面的书大多是非常出色的，我们所听到的建议也大多是比较合理与中肯的。所以，问题的关键是来自于这些书和建议所缺乏的内容。本书将致力于填补这些空缺。
 
