--- a/01.qmd
+++ b/01.qmd
@@ -107,31 +107,57 @@
 
 : 给研究生的建议
 
-+------------------------------------+-----------------------------------------------------+
-| 读，再读，反复读                     | 经验丰富的研究者通常有一份不断完善的 “文献目录”。大约五十页到一百页左右。这份文献目录集里集中了他们所在专业的核心参考文献，有了这份目录，他们才能非常熟悉自己所在专业的文献，当然，要制作这样一份目录，学生们首先要读足够多的书。|
-+------------------------------------+-------------------------------------------------------+
-| 写，再写，反复写                     |                                                     |
-|                                    | - 写作是熟能生巧的一项技能：写得越多。写起来也就越容易。 |
-|                                    | - 在写作的时候应该以出版为目的，也就是要成文，这样做的好处之一首先是可以为将来的修订带来不少便利，其次是如果有人对你的研究感兴趣的话，你也有东西可以展示给他们看。|
-|                                    | - 不要扔掉你写过的东西。把它们编好日期并存放在一个“便携”文件夹里，这些材料对你来说可能会是很有用的。|
-|                                    | - 做修订通常比写新东西来得容易。                        |
-+------------------------------------+-------------------------------------------------------+
-| 做一份有注解的文献目录               | 这是唯一一个你能够提供给自己的最好的研究工具。它应该是一个非常具有个性色彩的工具，包括常用的书目信息、读到该论文的时间，以及其他一些注释（资料中你认为有趣的内容／有创造性的内容／让人不满的内容）。  |
-+------------------------------------+-------------------------------------------------------+
-| 组成一个“非正式委员会”               | 尽量找到这样一小批可靠并且对你的研究感兴趣的人－他们愿意读你的东西，愿意对你的观点发表评论，愿意给你指出一些值得注意的文献。愿意把你介绍给其他的研究者……这些人可以是那些能做出专业鉴定的专家（他们的意见值得听取），也可以是一些专提刁难问题的通才（他们通晓几个领域的知识和技能）。  |
-+------------------------------------+-------------------------------------------------------+
-| 发表你的著作                         | 在技术报告、学术讨论会和研讨会上公开发表你的文章。获得信息最好的办法就是和别人共享信息。人们只有知道了你的思想，才能够做出回应。把你的文章公之于众可以让你更早面对他人的问题和批评（因为还早，这些问题和批评对你都是有好处的），也可以帮你融人一个“人际网”，还可以提供不少锻炼你的表达能力尤其是推理论证能力的机会。  |
-+------------------------------------+-------------------------------------------------------+
-| 然后？学会问其他的问题               | 学生们往往是有一点成果之后就忘了要走下一步了。“嘿，我找到它们之间的联系了！”“然后呢？”要学会超越你最初的问题，学会换个角度思考，只有这样才能看到不同的角度，然后找到其他可供选择的解释。  |
-+------------------------------------+-------------------------------------------------------+
-| 不要躲着你的导师                     | “躲导师”从某种程度上来说是每个研究生都可能犯的通病。事实上，要想最大限度地从你的导师那里获取信息，主动和他交流是首要的条件。          |
-+------------------------------------+-------------------------------------------------------+
-| 多做备份（保证其中一份是不在网上的） | 不止一个学生因为忽略了多做备份这一最基本的问题而到头来不得不重新从草稿写起，或者重复实证性研究。  |
-+------------------------------------+-------------------------------------------------------+
-| 至少完整地读完一篇博士论文           | 要思考博士论文的结构、内容、风格和“它提出了什么论点”，读一些“通过”了的文章，是一个非常不错的方法。  |
-+------------------------------------+-------------------------------------------------------+
-| 只有取得／未取得博士学位两种情况     | 学会适时放弃。                                          |
-+------------------------------------+-------------------------------------------------------+
++-------------------------------------+----------------------------------------------------------+
+| 读，再读，反复读                    | 经验丰富的研究者通常有一份不断完善的“文献目录”。         |
+|                                     | 大约五十页到一百页左右。这份文献目录集里集中了他们       |
+|                                     | 所在专业的核心参考文献，有了这份目录，他们才能非常       |
+|                                     | 熟悉自己所在专业的文献，当然，要制作这样一份目录，       |
+|                                     | 学生们首先要读足够多的书。                               |
++-------------------------------------+----------------------------------------------------------+
+| 写，再写，反复写                    |                                                          | 
+|                                     | - 写作是熟能生巧的一项技能：写得越多。写起来也就越容易。 |
+|                                     | - 在写作的时候应该以出版为目的，也就是要成文，这样做的   |
+|                                     |   好处之一首先是可以为将来的修订带来不少便利，其次是如果 |
+|                                     |   有人对你的研究感兴趣的话，你也有东西可以展示给他们看。 |
+|                                     | - 不要扔掉你写过的东西。把它们编好日期并存放在一个“便携” |
+|                                     |   文件夹里，这些材料对你来说可能会是很有用的。           |
+|                                     | - 做修订通常比写新东西来得容易。                         |
++-------------------------------------+----------------------------------------------------------+
+| 做一份有注解的文献目录              | 这是唯一一个你能够提供给自己的最好的研究工具。它应该是   |
+|                                     | 一个非常具有个性色彩的工具，包括常用的书目信息、读到该   |
+|                                     | 论文的时间，以及其他一些注释（资料中你认为有趣的内容／   |
+|                                     | 有创造性的内容／让人不满的内容）。                       |
++-------------------------------------+----------------------------------------------------------+
+| 组成一个“非正式委员会”              | 尽量找到这样一小批可靠并且对你的研究感兴趣的人－他们愿意 |
+|                                     | 读你的东西，愿意对你的观点发表评论，愿意给你指出一些值得 |
+|                                     | 注意的文献。愿意把你介绍给其他的研究者……这些人可以是那 |
+|                                     | 些能做出专业鉴定的专家（他们的意见值得听取），也可以是一 |
+|                                     | 些专提刁难问题的通才（他们通晓几个领域的知识和技能）。   |
++-------------------------------------+----------------------------------------------------------+
+| 发表你的著作                        | 在技术报告、学术讨论会和研讨会上公开发表你的文章。获得信 |
+|                                     | 息最好的办法就是和别人共享信息。人们只有知道了你的思想， |
+|                                     | 才能够做出回应。把你的文章公之于众可以让你更早面对他人的 |
+|                                     | 问题和批评（因为还早，这些问题和批评对你都是有好处的）， |
+|                                     | 也可以帮你融人一个“人际网”，还可以提供不少锻炼你的表达   |
+|                                     | 能力尤其是推理论证能力的机会。                           |
++-------------------------------------+----------------------------------------------------------+
+| 然后？学会问其他的问题              | 学生们往往是有一点成果之后就忘了要走下一步了。           |
+|                                     | “嘿，我找到它们之间的联系了！”“然后呢？”                 |
+|                                     | 要学会超越你最初的问题，学会换个角度思考，只有这样才能   |
+|                                     | 看到不同的角度，然后找到其他可供选择的解释。             |
++-------------------------------------+----------------------------------------------------------+
+| 不要躲着你的导师                    | “躲导师”从某种程度上来说是每个研究生都可能犯的通病。     |
+|                                     | 事实上，要想最大限度地从你的导师那里获取信息，           |
+|                                     | 主动和他交流是首要的条件。                               |
++-------------------------------------+----------------------------------------------------------+
+| 多做备份（保证其中一份是不在网上的）| 不止一个学生因为忽略了多做备份这一最基本的问题而到头来   |
+|                                     | 不得不重新从草稿写起，或者重复实证性研究。               |
++-------------------------------------+----------------------------------------------------------+
+| 至少完整地读完一篇博士论文          | 要思考博士论文的结构、内容、风格和“它提出了什么论点”，   |
+|                                     | 读一些“通过”了的文章，是一个非常不错的方法。             |
++-------------------------------------+----------------------------------------------------------+
+| 只有取得／未取得博士学位两种情况    | 学会适时放弃。                                           |
++-------------------------------------+----------------------------------------------------------+
 
 ## 工具性行为和表现性行为
 
