--- a/10.qmd
+++ b/10.qmd
@@ -212,7 +212,7 @@
     * 指出未来的研究方向和计划。
 
 ## 读出字面背后的意思
-评审人非常善于读出你论文字面背后的意思，所以你应该避免那些会向评审人泄露不利于你的信息的语句。一些好的、差的和模棱两可的写作的例子见@tbl-alt-msg。
+评审人非常善于读出你论文字面背后的意思，所以你应该避免那些会向评审人泄露不利于你的信息的语句。一些好的、差的和模棱两可的写作的例子见[@tbl-alt-msg]。
 
 : 读出字面背后的意思：一些典型例子 {#tbl-alt-msg}
 
