Fix broken cross-reference
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/07.qmd
+++ b/07.qmd
@@ -1,4 +1,4 @@
-# 论文类型
+# 论文类型 {#sec-paper-type}
 
 论文有不同的分类方法。但很少有写作方面的书对这些方法加以介绍，它们通常被看做职业技能，并且是个人选择的事情。这里描述的分类是一个十分标准的分类，其中一些论文类型是十分正式的（如期刊中的“评论文章”这一类型），但其他的论文类型如“方法导向型论文”（method-mongering paper）则是不太正式的。
 
