--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ description-meta: |
 
 我们曾经花了很多时间去帮助博士生们解决问题，也曾为那些将要成为博士生并且希望避免类似问题的人提供过建议。他们中的大部分人都已经读过诸如《怎样获得博士学位》（*How to get a PhD*）这一类的书，也曾得到来自导师的好建议。现在的问题并不是关于这些书和建议，因为这方面的书大多是非常出色的，我们所听到的建议也大多是比较合理与中肯的。所以，问题的关键是来自于这些书和建议所缺乏的内容。本书将致力于填补这些空缺。
 
-我们关注的大部分问题是那些通常被称作隐性知识的内容————这些知识、没有人愿意明确地告诉你，因为他们认为你已经知道；或者因为他们已经对这些知识太过熟悉，以致忘记了其他人也许并不知道；抑或是因为他们认为这些知识不值得提起。作者通常会认为这些东西应该会被导师们在一些不是很正式的场合提到。在理想的世界中，的确应当如此，但现实情况是：导师们也都是普通人，他们并非没有缺点，而且他们工作都很忙，所以难免会有所疏漏。我们所做的就是把这些没有写下来的规则做一个概述和总结，以便让你对现实情况有一个更深人的了解。这样，你就可以向你的导师询问，你所从事的学科是怎样运行的；运气好的话，你可以从导师那里得到很多可靠并且明确的指导。
+我们关注的大部分问题是那些通常被称作隐性知识的内容——这些知识、没有人愿意明确地告诉你，因为他们认为你已经知道；或者因为他们已经对这些知识太过熟悉，以致忘记了其他人也许并不知道；抑或是因为他们认为这些知识不值得提起。作者通常会认为这些东西应该会被导师们在一些不是很正式的场合提到。在理想的世界中，的确应当如此，但现实情况是：导师们也都是普通人，他们并非没有缺点，而且他们工作都很忙，所以难免会有所疏漏。我们所做的就是把这些没有写下来的规则做一个概述和总结，以便让你对现实情况有一个更深人的了解。这样，你就可以向你的导师询问，你所从事的学科是怎样运行的；运气好的话，你可以从导师那里得到很多可靠并且明确的指导。
 
 按照我们的经验，博士生通常会在两类问题上遇到麻烦。一类是，学术系统怎样运行，以及为什么这样运行之类的大问题。例如：学术界一些杰出人物的特殊经历和职业发展道路是怎样的？为什么学术文章的写作如此枯燥？为什么有的人博士还没有毕业就可以在非常好的院系获得讲师职位，而另外一些人在获得博士学位十年以后仍然要为找到一个工作而奋斗？一个好的院系的评价标准是什么？为什么？有的学生害怕问这些问题会显得很无知，更多学生则是因为过于关注与博士学位直接相关的问题，而没有去考虑得更加长远，当他们意识到的时候，一切都晚了。
 
